[package]
name = "zcash_lightwallet_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.8.3"
protobuf = "*"
protobuf-codegen-pure = "2.28.0" # Included here just to get docs. :-<

[build-dependencies]
protobuf-codegen-pure = "2.28.0"
